# pow-orin-starter

./: .gitignore  README.md  pow.toml  pyproject.toml
sim/examples/: franka-pickplace.py
sim/exts/pow.camera.teleop_ros/pow/camera/teleop_ros/ogn/python/nodes/: OgnPowCameraTeleopRosPy.ogn  OgnPowCameraTeleopRosPy.py
